temporarily disabled the contact form

--- a/index.html
+++ b/index.html
@@ -198,9 +198,10 @@ and I'll be glad to tell you more!
 
             <div class="ten columns">
 
-                  <p class="lead">You can contact me either through one of my social networks<br/>
+                  <!-- <p class="lead">You can contact me either through one of my social networks<br/>
  or send me an email via the form below.
-                  </p>
+                  </p>-->
+									<p class="lead">Until I get my contact form migrated to AWS, you can contact me through one of my social networks</p>
 
             </div>
 
@@ -211,7 +212,8 @@ and I'll be glad to tell you more!
             <div class="eight columns">
 
                <!-- form -->
-               <form action="" method="post" id="contactForm" name="contactForm">
+               <!--
+							 <form action="" method="post" id="contactForm" name="contactForm">
 					<fieldset>
 
                   <div>
@@ -242,7 +244,8 @@ and I'll be glad to tell you more!
                   </div>
 
 					</fieldset>
-				   </form> <!-- Form End -->
+               </form> --> 
+               <!-- Form End -->
 
                <!-- contact-warning -->
                <div id="message-warning"> Error boy</div>
