new handling for contact form on statically hosted website

--- a/index.html
+++ b/index.html
@@ -198,11 +198,9 @@ and I'll be glad to tell you more!
 
             <div class="ten columns">
 
-                  <!-- <p class="lead">You can contact me either through one of my social networks<br/>
- or send me an email via the form below.
-                  </p>-->
-									<p class="lead">Until I get my contact form migrated to AWS, you can contact me through one of my social networks</p>
 
+               <p class="lead">You can contact me either through one of my social networks<br/>
+                  or send me an email via the form below.</p>
             </div>
 
          </div>
@@ -211,9 +209,8 @@ and I'll be glad to tell you more!
 
             <div class="eight columns">
 
-               <!-- form -->
-               <!--
-							 <form action="" method="post" id="contactForm" name="contactForm">
+               <!-- form --> 
+               <form action="" method="post" id="contactForm" name="contactForm">
 					<fieldset>
 
                   <div>
@@ -244,7 +241,7 @@ and I'll be glad to tell you more!
                   </div>
 
 					</fieldset>
-               </form> --> 
+               </form> 
                <!-- Form End -->
 
                <!-- contact-warning -->
