testing git on my mobile phone

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ and I'll be glad to tell you more!
                <!-- Form End -->
 
                <!-- contact-warning -->
-               <div id="message-warning"> Error boy</div>
+               <div id="message-warning"> Error!</div>
                <!-- contact-success -->
 				   <div id="message-success">
                   <i class="fa fa-check"></i>Your message was sent, thank you!<br>
