edit email field with working copy - for 99inbound

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ and I'll be glad to tell you more!
 
                   <div>
 						   <label for="contactEmail">Email <span class="required">*</span></label>
-						   <input type="text" value="" size="35" id="contactEmail" name="contactEmail">
+						   <input type="text" value="" size="35" id="contactEmail" name="email">
                   </div>
 
                   <div>
