added hidden company field for 99inbound

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ and I'll be glad to tell you more!
                         <img alt="" src="images/loader.gif">
                      </span>
                   </div>
-
+<input type="hidden" name="company" value="chris.dickinson.ch" />
 					</fieldset>
                </form> 
                <!-- Form End -->
