Added editable and optional Company field

--- a/index.html
+++ b/index.html
@@ -224,6 +224,11 @@ and I'll be glad to tell you more!
                   </div>
 
                   <div>
+						   <label for="contactCompany">Company</label>
+						   <input type="text" value="" size="35" id="contactCompany" name="company">
+                  </div>
+
+                  <div>
 						   <label for="contactSubject">Subject</label>
 						   <input type="text" value="" size="35" id="contactSubject" name="subject">
                   </div>
@@ -239,7 +244,6 @@ and I'll be glad to tell you more!
                         <img alt="" src="images/loader.gif">
                      </span>
                   </div>
-<input type="hidden" name="company" value="chris.dickinson.ch" />
 					</fieldset>
                </form> 
                <!-- Form End -->
