--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ and I'll be glad to tell you more!
             <div class="eight columns">
 
                <!-- form --> 
-               <form action="" method="post" id="contactForm" name="Chris Dickinson Website - Contact Form">
+               <form action="" method="post" id="contactForm" name="Chris Dickinson's Website - Contact Form">
 					<fieldset>
 
                   <div>
