change profile pic

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="images/profilepic.jpg" alt="" />
+            <img class="profile-pic"  src="images/profilepic.png" alt="" />
 
          </div>
 
@@ -91,8 +91,8 @@
             <h2>About Me</h2>
 
             <p>This website serves primarily as a landing page for my various online profiles.<br/>
-You will find a detailed CV on my professional social networks 
-<a target="_blank" href="https://ch.linkedin.com/in/christopherdickinson">LinkedIn</a> and 
+You will find a detailed CV on my professional social networks
+<a target="_blank" href="https://ch.linkedin.com/in/christopherdickinson">LinkedIn</a> and
 <a target="_blank" href="https://www.xing.com/profile/Christopher_Dickinson2">Xing</a>.
             </p>
             <p>If you want to know more about me, drop me a line under <a class="smoothscroll" href="#contact">Contact</a><br/>
@@ -209,7 +209,7 @@ and I'll be glad to tell you more!
 
             <div class="eight columns">
 
-               <!-- form --> 
+               <!-- form -->
                <form action="" method="post" id="contactForm" name="Chris Dickinson's Website - Contact Form">
 					<fieldset>
 
@@ -245,7 +245,7 @@ and I'll be glad to tell you more!
                      </span>
                   </div>
 					</fieldset>
-               </form> 
+               </form>
                <!-- Form End -->
 
                <!-- contact-warning -->
@@ -278,7 +278,7 @@ and I'll be glad to tell you more!
             </ul>
 
             <ul class="copyright">
-               <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>   
+               <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>
             </ul>
 
          </div>
