add bitcoin div

--- a/index.html
+++ b/index.html
@@ -286,6 +286,11 @@ and I'll be glad to tell you more!
          <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
 
       </div>
+	   
+      <div class="row">
+	<div id="btc-quote"></div>
+        <script type="text/javascript" src="https://www.weusecoins.com/embed.js"><script>      
+      </div>
 
    </footer> <!-- Footer End-->
 
