--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ and I'll be glad to tell you more!
 	   
       <div class="row">
 	<div id="btc-quote"></div>
-        <script type="text/javascript" src="https://www.weusecoins.com/embed.js"><script>      
+        <script type="text/javascript" src="https://www.weusecoins.com/embed.js"></script>      
       </div>
 
    </footer> <!-- Footer End-->
